<resources>
    <string name="app_name">AndroidTrain</string>
    <string name="button1">Button 1</string>
    <string name="button3">pick_contact</string>
    <string name="button4">fragment</string>
    <string name="button5">recycler_view</string>
    <string name="button6">Button 6</string>
    <string name="button7">Button 7</string>
    <string name="button8">Button 8</string>
    <string name="button9">Button 9</string>
    <string name="button10">Button 10</string>
    <string name="practice">Android practice</string>
    <string name="hello" translatable="false">Hello!</string>
    <string name="github" translatable="false">GitHub</string>
    <string name="signup" translatable="false">Signup</string>
    <string name="login">Login</string>
    <string name="aware" translatable="false">Aware</string>
    <string name="or_connect_with">or connect with</string>
    <string name="sign_up_with_e_mail">Sign Up with E-mail</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Fogot password?</string>
    <string name="facebook" translatable="false">Facebook</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="android" translatable="false">Android</string>
    <string name="java" translatable="false">Java</string>
    <string name="android_fragment" translatable="false">Android is a mobile operating system based on a modified version of the Linux kernel and other open source software, designed primarily for touchscreen mobile devices such as smartphones and tablets.</string>
    <string name="java_fragment" translatable="false">Java is a High Level, class-based, object-oriented programming language that is designed to have as few implementation dependencies as possible.</string>
    <string name="avatar" translatable="false">avatar</string>
    <string name="reached_the_bottom">Reached the bottom</string>
</resources>
